@@ -15,7 +15,7 @@ public class ConvertListTest {
         List<int[]> in = new ArrayList<>();
         in.add(new int[] {1});
         in.add(new int[] {2, 3});
-        List<Integer> expect = Arrays.asList(1, 2, 3);
+        List<Integer> expect = List.of(1, 2, 3);
         assertThat(ConvertList.convert(in), is(expect));
     }
 
@@ -26,7 +26,7 @@ public class ConvertListTest {
         in.add(new int[] {13, 14});
         in.add(new int[] {});
         in.add(new int[] {15, 16, 17});
-        List<Integer> expect = Arrays.asList(10, 11, 12, 13, 14, 15, 16, 17);
+        List<Integer> expect = List.of(10, 11, 12, 13, 14, 15, 16, 17);
         assertThat(ConvertList.convert(in), is(expect));
     }
 }
